--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-image: url("../public/assets/bg.JPG");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .fullscreen-image img {
