--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-image: url("./bg.JPG");
+  background-image: url("./bg.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
